--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1,22 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>800</width>
-    <height>600</height>
-   </rect>
-  </property>
-  <property name="windowTitle">
-   <string>MainWindow</string>
-  </property>
-  <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar"/>
-  <widget class="QStatusBar" name="statusbar"/>
- </widget>
- <resources/>
- <connections/>
+	<class>MainWindow</class>
+	<widget class="QMainWindow" name="MainWindow">
+		<property name="geometry">
+			<rect>
+				<x>0</x>
+				<y>0</y>
+				<width>800</width>
+				<height>600</height>
+			</rect>
+		</property>
+		<property name="windowTitle">
+			<string>MainWindow</string>
+		</property>
+		<widget class="QWidget" name="centralwidget">
+			<widget class="QWidget" name="verticalLayoutWidget">
+				<property name="geometry">
+					<rect>
+						<x>50</x>
+						<y>80</y>
+						<width>221</width>
+						<height>241</height>
+					</rect>
+				</property>
+				<property name="sizePolicy">
+					<sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+						<horstretch>0</horstretch>
+						<verstretch>0</verstretch>
+					</sizepolicy>
+				</property>
+				<layout class="QVBoxLayout" name="verticalLayout">
+					<item>
+						<widget class="QLabel" name="label">
+							<property name="text">
+								<string>Minesweeper</string>
+							</property>
+							<property name="alignment">
+								<set>Qt::AlignCenter</set>
+							</property>
+						</widget>
+					</item>
+					<item>
+						<widget class="QPushButton" name="startGame">
+							<property name="sizePolicy">
+								<sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+									<horstretch>0</horstretch>
+									<verstretch>0</verstretch>
+								</sizepolicy>
+							</property>
+							<property name="text">
+								<string>Start game</string>
+							</property>
+						</widget>
+					</item>
+					<item>
+						<widget class="QPushButton" name="choose">
+							<property name="sizePolicy">
+								<sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+									<horstretch>0</horstretch>
+									<verstretch>0</verstretch>
+								</sizepolicy>
+							</property>
+							<property name="text">
+								<string>
+									Choose difficulty
+									(map 9x9, 10 mines)
+								</string>
+							</property>
+						</widget>
+					</item>
+					<item>
+						<widget class="QPushButton" name="About">
+							<property name="sizePolicy">
+								<sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+									<horstretch>0</horstretch>
+									<verstretch>0</verstretch>
+								</sizepolicy>
+							</property>
+							<property name="text">
+								<string>About</string>
+							</property>
+						</widget>
+					</item>
+				</layout>
+			</widget>
+		</widget>
+		<widget class="QMenuBar" name="menubar">
+			<property name="geometry">
+				<rect>
+					<x>0</x>
+					<y>0</y>
+					<width>800</width>
+					<height>25</height>
+				</rect>
+			</property>
+		</widget>
+		<widget class="QStatusBar" name="statusbar"/>
+	</widget>
+	<resources/>
+	<connections/>
 </ui>
